# bot-inteligente-atendimento

./: .gitignore  docker-compose.yml
backend/: .sequelizerc  Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js  test-delete.js
backend/src/: app.js
backend/src/config/: aiServiceConfig.js  database.js  firebaseAdmin.js  redisClient.js
backend/src/controllers/: assuntoPendenteController.js  authController.js  categoriaController.js  (+10 more)
front/: Dockerfile  Dockerfile.dev  cors-config.json  index.html  package-lock.json  package.json  vite.config.js
front/css/: style.css
front/js/: categories.js  chatbot.js  dashboard.js  forgot-password.js  knowledgeLibrary.js  login.js  profile.js  profiles.js  register.js  report.js  reset-password.js  upload.js  users.js
front/nginx/: default.conf
front/pages/: categories.html  chatbot.html  dashboard.html  forgot_password.html  knowledge_library.html  profile.html  profiles.html  register.html  report.html  reset_password.html  upload.html  users.html
postgres-init/: init.sql
services/ai_service/: Dockerfile  README.md  debug.py  main.py  pyproject.toml  requirements.txt
services/ai_service/ai_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/ai_service/api/: router.py
services/ai_service/api/endpoints/: askembedding.py  document_process.py  pendencies.py  rag.py
services/ai_service/config/: database.py  logging_config.py  settings.py
services/ai_service/core/: document_analyzer.py
services/ai_service/models/: loader.py
services/ai_service/schemas/: document.py
(+83 files in other folders)
